--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <h2>Tentang HTML</h2>
 <p>HTML=HyperText Markup Language</p>
 <a href="https://matematika.uin-malang.ac.id">Official Website Acount</a>
-<img src="https://progate.com/images/html/beginner/wanko.jpg">Profile Member</a>
+<img src="https://progate.com/images/html/beginner/wanko.jpg">
