--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <p>HTML=HyperText Markup Language</p>
 <a href="https://matematika.uin-malang.ac.id">Official Website Acount</a>
 <img src="https://progate.com/images/html/beginner/wanko.jpg">
+<img src="https://progate.com/images/html/beginner/school.jpg">
