--- a/index.html
+++ b/index.html
@@ -2,5 +2,9 @@
 <h2>Tentang HTML</h2>
 <p>HTML=HyperText Markup Language</p>
 <a href="https://matematika.uin-malang.ac.id">Official Website Acount</a>
+
 <img src="https://progate.com/images/html/beginner/wanko.jpg">
+
 <img src="https://progate.com/images/html/beginner/school.jpg">
+
+<img src="https://upload.wikimedia.org/wikipedia/id/thumb/d/d0/UIN_MAULANA_MALIK_IBRAHIM.jpg/800px-UIN_MAULANA_MALIK_IBRAHIM.jpg">
