--- a/index.html
+++ b/index.html
@@ -8,3 +8,9 @@
 <img src="https://progate.com/images/html/beginner/school.jpg">
 
 <img src="https://upload.wikimedia.org/wikipedia/id/thumb/d/d0/UIN_MAULANA_MALIK_IBRAHIM.jpg/800px-UIN_MAULANA_MALIK_IBRAHIM.jpg">
+
+<ul>
+  <li>HTML</li>
+  <li>PHP</li>
+  <li>Ruby</li>
+</ul>
