--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <img src="https://upload.wikimedia.org/wikipedia/id/thumb/d/d0/UIN_MAULANA_MALIK_IBRAHIM.jpg/800px-UIN_MAULANA_MALIK_IBRAHIM.jpg">
 
 <ul>
-  <li>HTML</li>
+  <li class="selected">HTML</li>
   <li>PHP</li>
   <li>Ruby</li>
 </ul>
