--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
-<link rel="stylesheet" href="stylesheet.css">
-<h1>Selamat Datang di Progate</h1>
-<h2>Tentang HTML</h2>
-<p>HTML=HyperText Markup Language</p>
-<a href="https://matematika.uin-malang.ac.id">Official Website Acount</a>
-
-<img src="https://progate.com/images/html/beginner/wanko.jpg">
-
-<img src="https://progate.com/images/html/beginner/school.jpg">
-
-<img src="https://upload.wikimedia.org/wikipedia/id/thumb/d/d0/UIN_MAULANA_MALIK_IBRAHIM.jpg/800px-UIN_MAULANA_MALIK_IBRAHIM.jpg">
-
-<ul>
-  <li class="selected">HTML</li>
-  <li>PHP</li>
-  <li>Ruby</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pemrograman Komputer II</title>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
+<body>
+  <h1>Selamat Datang di Progate</h1>
+  <h2>Tentang HTML</h2>
+  <p>HTML=HyperText Markup Language</p>
+  
+  <a href="https://matematika.uin-malang.ac.id">Official Website Acount</a>
+  <img src="https://progate.com/images/html/beginner/wanko.jpg">
+  <img src="https://progate.com/images/html/beginner/school.jpg">
+  <img src="https://upload.wikimedia.org/wikipedia/id/thumb/d/d0/UIN_MAULANA_MALIK_IBRAHIM.jpg/800px-UIN_MAULANA_MALIK_IBRAHIM.jpg">
+  <ul>
+    <li class="selected">HTML</li>
+    <li>PHP</li>
+    <li>Ruby</li>
+  </ul>
+</body>
+</html>
