--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <div class="header">
         <h1>Selamat Datang di Progate</h1>
         <h2>Tentang HTML</h2>
+        <div>
+            <div class="header-logo">Progate</div>
+            <div class="header-list">
+                <ul>
+                    <li>Tentang</li>
+                    <li>Pelajaran</li>
+                    <li>Hubungi kami</li>
+                </ul>
+            </div>
+            </div>
     </div>
     
     <!-- main konten dimulai -->
