--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,39 +8,132 @@
     <title>Pemrograman Komputer II</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
+
 <body>
 
     <!-- header konten dimulai -->
     <div class="header">
-            <div class="header-logo">Progate</div>
-            <div class="header-list">
-                <ul>
-                    <li>Tentang</li>
-                    <li>Pelajaran</li>
-                    <li>Hubungi kami</li>
-                </ul>
-            </div>
+        <div class="header-logo">Progate</div>
+        <div class="header-list">
+            <ul>
+                <li>Tentang</li>
+                <li>Pelajaran</li>
+                <li>Hubungi kami</li>
+            </ul>
+        </div>
     </div>
-    
+
+    <!-- code baru -->
+    <header>
+    </header>
+    <div class="top-wrapper">
+        <div class="container">
+            <h1>BELAJAR CODING.</h1>
+            <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
+            <p>Progate adalah platform online untuk belajar coding.</p>
+            <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
+            <div class="btn-wrapper">
+                <a href="#" class="btn signup">Daftar dengan Email</a>
+                <p>atau</p>
+                <a href="#" class="btn facebook">Daftar dengan Facebook</a>
+                <a href="#" class="btn twitter">Daftar dengan Twitter</a>
+            </div>
+        </div>
+    </div>
+    <div class="lesson-wrapper">
+    </div>
+    <div class="message-wrapper">
+    </div>
+    <footer>
+    </footer>
+
     <!-- main konten dimulai -->
     <div class="main">
 
         <div class="copy-container">
-            <h1>HELOO WORLD<span>.</span></h1>
+            <h1>HELLO WORLD<span>.</span></h1>
             <h2>Ayo belajar coding</h2>
         </div>
 
-        <div class="contents">
+        <div>
+            <div class="contents">
+                <h3 class="section-title">Pelajaran</h3>
+
+                <div class="contents-item">
+                    <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
+                    <p>HTML & CSS</p>
+                </div>
+
+                <!-- Tambahkan tag <div> dengan class "contents-item" -->
+                <div class="contents-item">
+                    <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg">
+                    <p>PHP</p>
+                </div>
+
+                <!-- Tambahkan tag <div> dengan class "contents-item" -->
+                <div class="contents-item">
+                    <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg">
+                    <p>Ruby</p>
+                </div>
+
+                <!-- Tambahkan tag <div> dengan class "contents-item" -->
+                <div class="contents-item">
+                    <img
+                        src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg">
+                    <p>Swift</p>
+                </div>
+            </div>
+
+            <div class="contact-form">
+                <h3 class="section-title">Identitas Anda</h3>
+
+                <p>Email :<span>*</span></p>
+                <input>
+
+                <p>Nama Lengkap :<span>*</span></p>
+                <input>
+
+                <p>Agama :<span>*</span></p>
+
+                <form>
+                    <input type="radio" id="islam" name="fav_language" value="Islam">
+                    <label for="islam">Islam</label><br>
+                    <input type="radio" id="kristen" name="fav_language" value="kristen">
+                    <label for="islam">Kristen</label><br>
+                    <input type="radio" id="hindu" name="fav_language" value="hindu">
+                    <label for="islam">Hindu</label><br>
+                    <input type="radio" id="budha" name="fav_language" value="budha">
+                    <label for="islam">Budha</label><br>
+                    <input type="radio" id="konghuchu" name="fav_language" value="konghuchu">
+                    <label for="islam">Konghuchu</label>
+                </form>
+
+                <p>Pekerjaan :<span>*</span></p>
+                <form action="/action_page.php">
+                    <input type="checkbox" id="vehicle1" name="vehicle1" value="uiux">
+                    <label for="vehicle1">UI/UX Designer</label><br>
+                    <input type="checkbox" id="vehicle2" name="vehicle2" value="backend">
+                    <label for="vehicle2">Backend Develompent</label><br>
+                    <input type="checkbox" id="vehicle3" name="vehicle3" value="frontend">
+                    <label for="vehicle3">Frontend Development</label><br>
+                    <input type="checkbox" id="vehicle4" name="vehicle4" value="lainnya">
+                    <label for="vehicle3">lainnya..</label><br>
+                </form>
+
+                <p>Pesan</p>
+                <textarea>
+
+                </textarea>
+
+                <p>*Bidang wajib diisi.</p>
+                <input class="contact-submit" type="submit" value="Submit">
+
+            </div>
 
         </div>
 
-        <div class="conteact-form">
-
-        </div>
-    </div>
-
-    <!-- footer konten dimulai -->
-    <div class="footer">
+        <!-- footer konten dimulai -->
+        <div class="footer">
             <div class="footer-logo">Progate</div>
             <div class="footer-list">
                 <ul>
@@ -48,7 +142,8 @@
                     <li>Hubungi Kami</li>
                 </ul>
             </div>
-    </div>
-    
+        </div>
+
 </body>
+
 </html>
