--- a/index.html
+++ b/index.html
@@ -7,9 +7,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pemrograman Komputer II</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
 <body>
+    <!-- code baru -->
+    <header>
+        <div class="container">
+            <div class="header-left">
+                <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+            </div>
+            <div class="header-right">
+                <a href="#" class="login">Log in</a>
+            </div>
+        </div>
+    </header>
+    <div class="top-wrapper">
+        <div class="container">
+            <h1>BELAJAR CODING.</h1>
+            <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
+            <p>Progate adalah platform online untuk belajar coding.</p>
+            <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
+            <div class="btn-wrapper">
+                <a href="#" class="btn signup">Daftar dengan Email</a>
+                <p>atau</p>
+                <a href="#" class="btn facebook">
+                    <span class="fa fa-facebook"></span>
+                    Daftar dengan Facebook
+                </a>
+                <a href="#" class="btn twitter">
+                    <span class="fa fa-twitter"></span>
+                    Daftar dengan Twitter
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="lesson-wrapper">
+        <div class="container">
+            <div class="heading">
+                <h2>Cari tau dari mana Anda mau memulai!</h2>
+            </div>
+            <div class="lessons">
+            </div>
+        </div>
+    </div>
+    <div class="message-wrapper">
+    </div>
+    <footer>
+    </footer>
 
     <!-- header konten dimulai -->
     <div class="header">
@@ -22,30 +67,6 @@
             </ul>
         </div>
     </div>
-
-    <!-- code baru -->
-    <header>
-    </header>
-    <div class="top-wrapper">
-        <div class="container">
-            <h1>BELAJAR CODING.</h1>
-            <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
-            <p>Progate adalah platform online untuk belajar coding.</p>
-            <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
-            <div class="btn-wrapper">
-                <a href="#" class="btn signup">Daftar dengan Email</a>
-                <p>atau</p>
-                <a href="#" class="btn facebook">Daftar dengan Facebook</a>
-                <a href="#" class="btn twitter">Daftar dengan Twitter</a>
-            </div>
-        </div>
-    </div>
-    <div class="lesson-wrapper">
-    </div>
-    <div class="message-wrapper">
-    </div>
-    <footer>
-    </footer>
 
     <!-- main konten dimulai -->
     <div class="main">
